# cpp-template

./: .gitignore  .liccor.yml  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cpp
